--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,10 +11,10 @@
         android:id="@+id/textView4"
         android:layout_width="143dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="22dp"
+        android:layout_marginStart="22dp"
         android:layout_marginTop="49dp"
         android:layout_marginBottom="10dp"
-        android:text="Hai Selamat Datang Kembali"
+        android:text="@string/hai_selamat_datang_kembali"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -34,7 +34,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="303dp"
-        android:layout_height="262dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:orientation="vertical"
         app:cardCornerRadius="10dp"
@@ -52,43 +52,48 @@
                 android:layout_height="19dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="19dp"
-                android:text="Masuk"
+                android:text="@string/masuk"
                 android:textSize="14sp" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etMasukEmail"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="259dp"
-                android:layout_height="44dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="21dp"
                 android:layout_marginBottom="12dp"
-                android:hint="Email"
+                android:hint="@string/email"
                 app:boxCornerRadiusBottomEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+
+                    android:id="@+id/etMasukEmail"
+                    android:inputType="textEmailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="12sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etMasukPassword"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="259dp"
-                android:layout_height="44dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="12dp"
-                android:hint="Password"
+                android:hint="@string/password"
+                app:endIconMode="password_toggle"
                 app:boxCornerRadiusBottomEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+
+                    android:id="@+id/etMasukPassword"
+                    android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="12sp" />
@@ -102,15 +107,31 @@
                 android:layout_marginBottom="15dp"
                 android:background="@drawable/buttonround"
                 android:backgroundTint="@color/Primary_color"
-                android:text="Masuk"
+                android:text="@string/masuk"
                 android:textSize="14sp" />
+           <LinearLayout
+               android:layout_gravity="center_horizontal"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginBottom="20dp">
+                <TextView
+                    android:layout_width="149dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
+                    android:text="@string/belum_punya_akun"
+                    android:paddingStart="35dp"
+                    android:textSize="12sp" />
+               <TextView
+                   android:id="@+id/btnMasukDaftar"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="@string/daftar"
+                   android:onClick="Daftar"
+                   android:textColor="@color/Primary_color"
+                   android:textSize="12sp"
+                   android:background="@color/white"/>
 
-            <TextView
-                android:layout_width="149dp"
-                android:layout_height="16dp"
-                android:layout_gravity="center"
-                android:text="Belum punya akun?Daftar"
-                android:textSize="12sp" />
+           </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -121,7 +142,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:text="Powered By"
+        android:text="@string/supported_by"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -142,7 +163,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginRight="25dp"
+            android:layout_marginEnd="25dp"
             android:src="@drawable/ic_telu" />
 
         <ImageView
