--- a/app/src/main/res/layout/content_detail_obat.xml
+++ b/app/src/main/res/layout/content_detail_obat.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,7 +23,7 @@
                 android:id="@+id/ivDetailObat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:src="@drawable/ic_medi"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -29,11 +31,12 @@
 
             <TextView
                 android:id="@+id/tvDetailJudulObat"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
+                android:lines="1"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
-                android:text="IMBOOST FORCE 10 KAPLET"
+                android:text="@string/obat_default"
                 android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/ivDetailObat"
@@ -43,9 +46,9 @@
                 android:id="@+id/tvDetailPenjelasanObat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
-                android:text="PerStrip"
+                android:text="@string/jumlah_jual_default"
                 app:layout_constraintStart_toEndOf="@+id/ivDetailObat"
                 app:layout_constraintTop_toBottomOf="@+id/tvDetailJudulObat" />
 
@@ -54,8 +57,8 @@
                 android:id="@+id/tvDetailHargaObat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="RP 80.000"
+                android:layout_marginStart="20dp"
+                android:text="@string/harga_default"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ivDetailObat"
                 app:layout_constraintTop_toBottomOf="@+id/tvDetailPenjelasanObat" />
@@ -65,10 +68,10 @@
                 android:layout_width="100dp"
                 android:layout_height="30dp"
                 android:background="@drawable/buttonround"
-                android:text="Tambah"
+                android:text="@string/tambah"
                 android:textSize="8sp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvDetailJudulObat" />
